# c-_training

./: .gitignore  cpp_learning_plan.md
week1/: README.md  calculator  calculator.cpp  calculator_functions.cpp  conditionals.cpp  functions.cpp  grade_calculator.cpp  hello_world  hello_world.cpp  loops.cpp  number_guessing_game  number_guessing_game.cpp  operators  operators.cpp  pattern_printing.cpp  user_input  user_input.cpp  variables  variables.cpp
week2/: README.md  abstract_class  abstract_class.cpp  access_specifiers.cpp  bank_account  bank_account.cpp  basic_class  basic_class.cpp  basic_inheritance  basic_inheritance.cpp  constructors  constructors.cpp  polymorphism  polymorphism.cpp  rectangle_class.cpp  student_class.cpp
week2/library_system/: README.md  book.h  dvd.h  journal.h  library.h  library_item.h  library_system  main.cpp
week3/: README.md  README_MODERN_CPP.md  advanced_task_scheduler.hpp  advanced_task_scheduler_demo  advanced_task_scheduler_demo.cpp  class_templates  class_templates.cpp  data_analysis.csv  exception_handling  exception_handling.cpp  function_templates  function_templates.cpp  modern_cpp_concurrency  modern_cpp_concurrency.cpp  modern_cpp_filesystem  modern_cpp_filesystem.cpp  modern_cpp_fold_expressions  modern_cpp_fold_expressions.cpp  modern_cpp_optional  modern_cpp_optional.cpp  modern_cpp_part1  modern_cpp_part1.cpp  modern_cpp_part2_auto  modern_cpp_part2_auto.cpp  modern_cpp_part2_lambdas  modern_cpp_part2_lambdas.cpp  modern_cpp_part2_optional.cpp  stl_algorithms  stl_algorithms.cpp  stl_containers  stl_containers.cpp  stl_practical_example  stl_practical_example.cpp
week4/: README.md  WEEK4_SUMMARY.md  container_performance.cpp  custom_allocators.cpp  custom_comparators.cpp  custom_iterators.cpp  memory_efficient_containers.cpp
week4/data_processing_pipeline/: Makefile  data_processor.cpp  data_processor.hpp  main.cpp
week5/: README.md
week5/cmake_basics/: CMakeLists.txt
week5/cmake_basics/cmake/: CMakeBasicsConfig.cmake.in
week5/cmake_basics/include/: math_utils.hpp  version.hpp.in
week5/cmake_basics/src/: demo.cpp  main.cpp  math_utils.cpp
week5/testing_frameworks/: README.md
